--- a/styles/base.css
+++ b/styles/base.css
@@ -230,7 +230,6 @@ img {
 
 .blinkies-header {
     color: var(--accent);
-    border-bottom: 1px dashes #333;
     padding-bottom: 5px;
     margin-bottom: 10px;
     font-size: 1.1rem;
@@ -251,7 +250,7 @@ img {
 
 /* moon widget */
 .moon-widget {
-    background: #111;
+    background: #000;
     border: 1px solid #333;
     padding: 10px;
     position: relative;
@@ -289,6 +288,36 @@ img {
 .mw-label { color: #888; }
 
 .mw-val-yellow { color: var(--accent-gold); text-shadow: 0 0 2px #555500; }
+
+.visitor-panel {
+    background: #000;
+    padding: 10px;
+    border: 1px solid #333;
+    font-family: 'VT323', monospace;
+}
+
+.visitor-header {
+    color: var(--accent);
+    font-size: 1.1rem;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+}
+
+.visitor-visual {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+.visitor-counter img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    image-rendering: pixelated;
+}
 
 /* FOOTER */
 .site-footer {
